--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/index.css">
-    <title>test-suitable</title>
+    <link rel="stylesheet" href="/src/index.css" />
+    <title>Demoburguer</title>
   </head>
-  <body>
+  <body style="background-color: #333;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
